<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia !</string>
    <string name="my_icon" translatable="false">my_icon</string>
    <string name="iconn" translatable="false">iconN</string>
    <string name="menu" translatable="false">menu</string>
    <string name="likesdescr" translatable="false">likesdescr</string>
    <string name="sharedescr" translatable="false">sharedescr</string>
    <string name="lookdescr" translatable="false">lookdescr</string>
    <string name="zero_likes" translatable="false">0</string>
    <string name="zero_share" translatable="false">0</string>
    <string name="zero_look" translatable="false">0</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="inputtext">InputText</string>
    <string name="buttonsave" translatable="false">buttonSave</string>
    <string name="buttonabort" translatable="false">buttonAbort</string>
    <string name="error_empty_content">Error</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="save" translatable="false">Save</string>
    <string name="appbarbuttondescr" translatable="false">AppBarButtonDescr</string>
    <string name="enter_text_hint">EnterTextHint</string>
    <string name="buttoncreate">Create</string>
    <string name="update">Update</string>
    <string name="linkvideo" translatable="false">linkVideo</string>
    <string name="error_empty_video_link">ErrorLinkVideo</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="empty_posts">empty_posts</string>
    <string name="error_loading">error_loading</string>
    <string name="retry_loading">retry_loading</string>
    <string name="new_posts_available">new_posts</string>
    <string name="arrow_new_posts" translatable="false">arrow_new_posts</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="sign_out">sign_out</string>
    <string name="login" translatable="false">login</string>
    <string name="password" translatable="false">password</string>
    <string name="reklama">reklama</string>

</resources>