<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_16dp">

    <ImageView
        android:id="@+id/iconNetology"
        android:layout_width="@dimen/avatar_size_48dp"
        android:layout_height="@dimen/avatar_size_48dp"
        android:contentDescription="@string/iconn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology" />

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:maxLines="1"
        android:ellipsize="end"

        app:layout_constraintEnd_toStartOf="@id/iconMenu"
        app:layout_constraintStart_toEndOf="@+id/iconNetology"
        app:layout_constraintTop_toTopOf="@+id/iconNetology"
        tools:text="@sample/posts.json/data/author"/>

    <TextView
        android:id="@+id/textPublished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/spacing_16dp"

        app:layout_constraintBottom_toBottomOf="@+id/iconNetology"
        app:layout_constraintStart_toEndOf="@+id/iconNetology"
        app:layout_constraintTop_toBottomOf="@+id/textAuthor"
        tools:text="@sample/posts.json/data/published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iconNetology, textPublished, iconMenu"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/iconMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Style.MenuButton"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/textAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textAuthor"
        app:icon="@drawable/baseline_more_vert_24"/>

    <TextView
        android:id="@+id/nmediaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"

        android:shadowColor="@color/yellow"
        android:shadowRadius="5"
        android:text="@string/nmedia"

        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierOne" />

    <TextView
        android:id="@+id/textContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="56dp"

        android:autoLink="web"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierOne"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Style.LikeButton"
        android:checkable="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/likesdescr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContent"
        app:icon="@drawable/ic_like"
        tools:checked="true"
        tools:text="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Style.ShareButton"
        android:layout_marginStart="96dp"
        android:contentDescription="@string/sharedescr"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageHeart"
        app:icon="@drawable/baseline_share_24"
        tools:text="0"/>

    <ImageView
        android:id="@+id/imageLook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"

        android:contentDescription="@string/lookdescr"
        app:layout_constraintBottom_toBottomOf="@+id/imageShare"
        app:layout_constraintTop_toTopOf="@+id/imageShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_visibility_24"  />

    <TextView
        android:id="@+id/textCountLook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16dp"

        android:text="@string/zero_look"
        app:layout_constraintBottom_toBottomOf="@+id/imageLook"
        app:layout_constraintStart_toEndOf="@+id/imageLook"
        app:layout_constraintTop_toTopOf="@+id/imageLook" />
</androidx.constraintlayout.widget.ConstraintLayout>