<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/editTextCreateUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:autofillHints="edit_text"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:inputType="text|textImeMultiLine"
        tools:ignore="LabelFor"
        android:hint="@string/enter_text_hint"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttoncreate"
        android:textColor="@color/my_red_heart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/my_green"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateUpdate"
        app:strokeColor="@color/my_red_heart"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:backgroundTint="@color/my_green"
        app:cornerRadius="16dp"
        android:text="@string/update"
        android:textColor="@color/my_red_heart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:strokeColor="@color/my_red_heart"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreate"
        app:layout_constraintStart_toEndOf="@+id/buttonCreate"
        app:layout_constraintTop_toTopOf="@+id/buttonCreate" />


</androidx.constraintlayout.widget.ConstraintLayout>