<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/barrierTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="textInput, buttonAbort, buttonSave" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/inputtext"
        android:inputType="text|textImeMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonsave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/send_24" />

    <ImageButton
        android:id="@+id/buttonAbort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonabort"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="@+id/buttonSave"
        app:srcCompat="@drawable/delete_48"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>